Production/01-02-2025/force-app/main/default/objects/Prospects__c/Prospects__c.object-meta.xml
<CustomObject>
    <description>Database of candidates who have been evaluated</description>
    <label>Prospect</label>
    <nameField>
        <displayFormat>RECRUIT{0}</displayFormat>
        <label>Prospect&apos;s ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>