Production/01-02-2025/force-app/main/default/objects/Prospects__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country of Residence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>