Production/01-02-2025/force-app/main/default/objects/Prospects__c/fields/Interviewed__c.field-meta.xml
<CustomField>
    <fullName>Interviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has this candidate been interviewed by Eyeota for a similar role before?</inlineHelpText>
    <label>Interviewed</label>
    <type>Checkbox</type>
</CustomField>